--- a/app/index.ejs
+++ b/app/index.ejs
@@ -1,8 +1,10 @@
 <html>
 <head>
-	<script src="app.js"></script>
+	<link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
 	<h3>Hello React Express</h3>
+	<div id="app"></div>
+	<script src="app.js"></script>
 </body>
 </html>
